--- a/src/components/portfolioExample/portfolioExample.module.css
+++ b/src/components/portfolioExample/portfolioExample.module.css
@@ -1,10 +1,18 @@
+.container {
+    padding: 12vh 8vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+
 .kitchens {
     display: flex;
     flex-direction: column;
     gap: 2rem;
     height: 100%;
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 .title {
@@ -15,7 +23,6 @@
     display: grid;
     position: relative;
     grid-template-columns: repeat(2, 1fr);
-    height: 60vh;
     grid-auto-rows: min-content;
     gap: 2rem;
 }
